--- a/limon_chat_app/pubspec.yaml
+++ b/limon_chat_app/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   firebase_core: ^2.24.2
   firebase_auth: ^4.16.0
   google_sign_in: ^6.2.1
+  cloud_firestore: ^4.14.0
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +67,7 @@ flutter:
     - assets/images/decor_top.png
     - assets/images/decor_bottom.png
     - assets/images/register_bg.png
+    - assets/images/google_icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
